modifique el archivo index, agregando link de google

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Titulo de la pagina de prueba</h1>
     <p>parrafo ed la pagina 2</p>
-    <p>dkjfhvbklsevse lkdvnlks </p>
+    <p>otro parrafo mas </p>
+    <p><a href="www.google.com"></a>
+    </p>
 </body>
 </html>
